@@ -24,9 +24,11 @@ file.reference.lib-src=src
 file.reference.unit-src=test/unit/src
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.swing-layout.classpath}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint -Xmaxwarns 300
 javac.deprecation=true
 javac.source=1.5
 javac.target=1.5
@@ -60,7 +62,7 @@ run.test.classpath=\
 src.dir=${file.reference.lib-src}
 test.src.dir=${file.reference.unit-src}
 # Puce :
-j2sdk.api.home=http\://java.sun.com/j2se/1.4.2/docs/api
+j2sdk.api.home=http\://java.sun.com/j2se/1.5.0/docs/api
 # Puce :
 javadoc.link=${j2sdk.api.home}
 # Puce :
